@@ -3,6 +3,8 @@ restmini 1.x, 2017-04-22
 - New option record_args: record path/query/body arguments; for logs and the
   info() method.
 - Renamed path/query/body arguments; from 'parameters'.
+- New optional info() parameter 'only'; values request|response.
+- Use the info() method when logging errors.
 
 restmini 1.x, 2017-03-09
 ------------------------
